# ECG-Arrhythmia-Classifier

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ECG_Heartbeat_Classification/: Preprocessing.ipynb  train.py
ECG_Heartbeat_Classification /: __init__.py  dataset.py  holdset.ipynb  predict.py
ECG_Heartbeat_Classification /Deployment/: README.md  predict.py  test.py
ECG_Heartbeat_Classification /Deployment/GCP development/: app.py  index.html  requirements.txt
ECG_Heartbeat_Classification /Deployment/local development/: Dockerfile  README.md  app.py  requirements.txt  test.py
code/: baseline.ipynb  baseline.py  holdset.ipynb  predict.py
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/520233147491756452/: meta.yaml
mlruns/520233147491756452/10d97b6fddd845859d0a5ba6b8445d6c/: meta.yaml
mlruns/520233147491756452/18a644d225f44544a49b2d9ff36440aa/: meta.yaml
mlruns/520233147491756452/193af37e3d3940da864331aa3f0d711c/: meta.yaml
mlruns/520233147491756452/4920c622f2f843ccb9d1876e7243b9cd/: meta.yaml
mlruns/520233147491756452/4cd9ccfbd8b24bf79c52b95f8e0a2100/: meta.yaml
mlruns/520233147491756452/5ae3158c451c4268a89b7b8ea48c0841/: meta.yaml
mlruns/520233147491756452/8ba8ce457b6542319586ecefdabc27f6/: meta.yaml
mlruns/520233147491756452/b13bb9856f5142249dcae1c1e2c9e6bd/: meta.yaml
mlruns/520233147491756452/baab6d74708443a2a6f432cff333526c/: meta.yaml
mlruns/520233147491756452/f1c19dbbd41d42c68256bd3c352b3c25/: meta.yaml
models/: baseline_cnn_mitbih.h5  baseline_cnn_mitbih_final_model.h5
notebooks/: baseline.ipynb
(+102 files in other folders)
